--- a/styles.css
+++ b/styles.css
@@ -73,7 +73,7 @@ header {
 
   padding: 20px 0 0 40px;
   text-align: center;
-  width: fixed;
+  /*width: fixed;*/
 }
 
 .find {
@@ -314,7 +314,7 @@ i[class="fas fa-info"] {
   border-top: none;
 }
 
-more a:visited {
+.more a:visited {
   color: black;
 }
 
