--- a/styles.css
+++ b/styles.css
@@ -517,21 +517,19 @@ li {
 /*-----mobile------*/
 
 @media only screen and (max-width: 768px) {
+  body {
+    width: 100%;
+  }
+
   .links {
     display: flex;
     justify-content: space-between;
-    width: 190%;
-    font-size: 120%;
-  }
-
-  .body {
-    width: 100%;
   }
 
   .links a:link {
     color: black;
     border-bottom: 2px solid transparent;
-    padding-bottom: 50px;
+    padding-bottom: 30px;
     overflow: hidden;
     border-top: none;
   }
@@ -539,14 +537,15 @@ li {
   .links a:active {
     color: black;
     border-bottom: 2px solid rgb(224, 220, 220);
-    padding-bottom: 50px;
+    padding-bottom: 30px;
     overflow: hidden;
     border-top: none;
   }
+
   .links a:hover {
     color: #0065fc;
     border-bottom: 2px solid #0065fc;
-    padding-bottom: 50px;
+    padding-bottom: 30px;
     overflow: hidden;
     border-top: none;
   }
@@ -554,52 +553,42 @@ li {
   .logo {
     display: flex;
     justify-content: center;
-    width: 125%;
-    margin-left: 135px;
+    width: 100%;
   }
+
   nav {
     display: flex;
     flex-flow: row;
     justify-content: space-between;
   }
 
-  .acc-mars {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    width: 150%;
-  }
-
   .find {
-    font-size: 200%;
     font-weight: bold;
     margin-left: 15px;
-    width: 175%;
-    font-size: 300%;
+    font-size: 150%;
+    margin: 15px 15px 15px 15px;
   }
 
   .find-p {
-    margin-left: 15px;
-    font-size: 175%;
+    margin: 0 15px 15px 15px;
+    font-size: 120%;
   }
 
   .search-box {
     margin-left: 15px;
     margin-top: 50px;
-    size: 200%;
-    width: 150%;
   }
 
   .box {
     display: flex;
     justify-content: center;
-    width: 100%;
-    font-size: 150%;
+    width: 60%;
   }
+
   .search-icon {
     display: block;
     background-color: #0065fc;
-    width: 80px;
+    width: 60px;
     font-weight: bold;
     font-size: 18px;
     color: white;
@@ -611,9 +600,13 @@ li {
     display: none;
   }
 
+  br {
+    display: none;
+  }
+
   i[class="fas fa-map-marker-alt"] {
-    width: 70px;
-    height: 70px;
+    width: 50px;
+    height: 50px;
     text-align: center;
     font-size: 30px;
     line-height: 50px;
@@ -623,44 +616,49 @@ li {
   }
 
   .filters {
+    width: 100%;
     display: flex;
     flex-direction: row;
     justify-content: flex-start;
   }
   .filters-h {
-    margin-right: 200px;
     font-weight: bold;
-    font-size: 250%;
+    font-size: 150%;
   }
 
   .filter-1 {
     flex: 1;
     order: 2;
     margin-bottom: 15px;
-    margin-left: 15px;
+    font-size: 80%;
   }
 
   .filter-2 {
     flex: 1;
     order: 3;
-    margin-right: 120px;
+    margin-right: 15%;
     margin-bottom: 15px;
+    font-size: 80%;
   }
 
   .filter-3 {
     flex: 1;
     order: 2;
     margin-bottom: 15px;
+    font-size: 80%;
   }
 
   .filter-4 {
     flex: 1;
     order: 4;
-    margin-right: 120px;
+    margin-right: 15%;
+    font-size: 80%;
   }
 
   .info {
     order: 5;
+    margin-left: 5px;
+    font-size: 95%;
   }
 
   .grey-boxes {
@@ -670,6 +668,13 @@ li {
 
   .acc-mars {
     background-color: white;
+    margin: 0;
+    width: 100%;
+  }
+
+  .acc-title {
+    margin-left: 20px;
+    font-size: 80%;
   }
 
   .acc-card {
@@ -679,14 +684,13 @@ li {
     box-shadow: 5px 5px 8px 5px gray;
     background-color: white;
     border-radius: 15px;
-    margin: 30px 50px 15px 50px;
+    margin: 10px 5px 25px 20px;
     padding: 0;
+    width: 320px;
   }
 
   .acc-image {
-    width: 410px;
-    height: 130px;
-    object-fit: cover;
+    width: 100%;
     border-radius: 12px 12px 0 0;
   }
 
