--- a/styles.css
+++ b/styles.css
@@ -36,6 +36,7 @@ a:visited {
 body {
   font-family: "Raleway", sans-serif;
   font-size: 100%;
+  max-width: 1440px;
 }
 
 header {
@@ -204,6 +205,8 @@ i[class="fas fa-dog"] {
   justify-content: space-between;
   align-items: center;
   font-weight: bold;
+  overflow: hidden;
+  white-space: nowrap;
 
   margin-top: -48px;
   margin-left: 30px;
@@ -516,7 +519,7 @@ li {
 
 /*-----mobile------*/
 
-@media only screen and (max-width: 768px) {
+@media only screen and (max-width: 767px) {
   body {
     width: 98%;
     margin: 2%;
@@ -533,7 +536,7 @@ li {
 
   .links a:link {
     color: black;
-    border-bottom: 2px solid transparent;
+    border-bottom: 2px solid red;
     padding-bottom: 30px;
     overflow: hidden;
     border-top: none;
@@ -541,7 +544,7 @@ li {
 
   .links a:active {
     color: black;
-    border-bottom: 2px solid rgb(224, 220, 220);
+    border-bottom: 2px solid rgb(156, 23, 23);
     padding-bottom: 30px;
     overflow: hidden;
     border-top: none;
@@ -671,12 +674,14 @@ li {
   .grey-boxes {
     display: flex;
     flex-flow: column-reverse;
+    justify-content: center;
+    width: 100%;
   }
 
   .acc-mars {
     background-color: white;
-    margin: 0;
     width: 100%;
+    margin: 0;
   }
 
   .acc-title {
@@ -687,13 +692,14 @@ li {
   .acc-card {
     display: flex;
     flex-flow: column wrap;
-    justify-content: flex-start;
+    justify-content: space-evenly;
     box-shadow: 5px 5px 8px 5px gray;
     background-color: white;
     border-radius: 15px;
-    margin: 10px 5px 25px 20px;
+    margin: 10px 0 25px 10px;
     padding: 0;
-    width: 300px;
+    width: 90vw;
+    height: auto;
   }
 
   .acc-image {
@@ -710,7 +716,7 @@ li {
   }
 
   .popular {
-    width: 97%;
+    width: 100%;
   }
 
   .popular-card {
@@ -722,7 +728,8 @@ li {
     border-radius: 15px;
     margin: 15px 15px 30px 15px;
     padding: 10px;
-    width: 300px;
+    width: 80vw;
+    height: auto;
   }
 
   .pop-image {
@@ -772,7 +779,8 @@ li {
     border-radius: 15px;
     margin: 10px 5px 25px 20px;
     padding: 0;
-    width: 300px;
+    width: 90vw;
+    height: auto;
   }
 
   .act-img-1 {
@@ -796,7 +804,7 @@ li {
     border-radius: 15px;
     margin: 10px 5px 25px 20px;
     padding: 0;
-    width: 300px;
+    width: 90vw;
   }
 
   .act-img-2 {
@@ -816,7 +824,7 @@ li {
     border-radius: 15px;
     margin: 10px 5px 25px 20px;
     padding: 0;
-    width: 300px;
+    width: 90vw;
   }
 
   .act-img-3 {
@@ -836,7 +844,7 @@ li {
     border-radius: 15px;
     margin: 10px 5px 25px 20px;
     padding: 0;
-    width: 300px;
+    width: 90vw;
   }
 
   .act-img-4 {
@@ -867,3 +875,48 @@ li {
     font-size: 20px;
   }
 }
+
+/* -----tablet----- 
+@media only screen and (min-width: 768px) and (max-width: 992px)  {
+  .links {
+    display: flex;
+    justify-content: space-between;
+  }
+
+  .links a:link {
+    color: black;
+    border-bottom: 2px solid transparent;
+    padding-bottom: 30px;
+    overflow: hidden;
+    border-top: none;
+  }
+
+  .links a:active {
+    color: black;
+    border-bottom: 2px solid rgb(224, 220, 220);
+    padding-bottom: 30px;
+    overflow: hidden;
+    border-top: none;
+  }
+
+  .links a:hover {
+    color: #0065fc;
+    border-bottom: 2px solid #0065fc;
+    padding-bottom: 30px;
+    overflow: hidden;
+    border-top: none;
+  }
+
+  .logo {
+    display: flex;
+    justify-content: center;
+    width: 100%;
+  }
+
+  nav {
+    display: flex;
+    flex-flow: row;
+    justify-content: space-between;
+    width: 100%;
+  }
+} */
