--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,13 @@
-@font-face {
-  font-family: Releway;
-  src: url(Releway.ttf);
+body {
+  font-family: "Raleway", sans-serif;
+  font-size: 100%;
+  max-width: 1440px;
+  margin: auto;
+}
+
+header {
+  margin: 0;
+  border-radius: 10%;
 }
 
 a {
@@ -15,7 +22,6 @@ a:visited {
 }
 
 .links a:link {
-  color: black;
   border-top: 2px solid transparent;
   padding-top: 25px;
   overflow: hidden;
@@ -33,17 +39,6 @@ a:visited {
   border-bottom: none;
 }
 
-body {
-  font-family: "Raleway", sans-serif;
-  font-size: 100%;
-  max-width: 1440px;
-}
-
-header {
-  margin: 10px;
-  border-radius: 10%;
-}
-
 .links {
   display: inline-flex;
   align-self: flex-end;
@@ -54,27 +49,26 @@ header {
   display: inline-flex;
   padding-top: 20px;
   margin-left: 0%;
-  margin-right: 60%;
+  margin-right: 55%;
   margin-bottom: 25px;
 }
 
+#booki-logo {
+  width: 35%;
+}
+
 .acc {
-  flex-basis: auto;
   flex: 1;
   justify-content: center;
-
   padding: 20px 40px 0 0;
   text-align: center;
 }
 
 .act {
-  flex-basis: auto;
   flex: 1;
   justify-content: center;
-
   padding: 20px 0 0 40px;
   text-align: center;
-  /*width: fixed;*/
 }
 
 .find {
@@ -122,7 +116,6 @@ i[class="fas fa-map-marker-alt"] {
 .box {
   font-weight: bold;
   border: solid 2px #e9e6e6d0;
-  width: 16%;
 }
 
 ::placeholder {
@@ -130,8 +123,6 @@ i[class="fas fa-map-marker-alt"] {
   color: black;
   padding-left: 5px;
 }
-
-/* why does it work for section but not for .filters  */
 
 section {
   display: flex;
@@ -217,7 +208,14 @@ i[class="fas fa-dog"] {
   border-bottom-right-radius: 100px;
   border-left: none;
 }
-/*why does it only work with 50 50 */
+
+.filter-1 a:hover,
+.filter-2 a:hover,
+.filter-3 a:hover,
+.filter-4 a:hover {
+  color: #0065fc;
+}
+
 i[class="fas fa-info"] {
   width: 35px;
   height: 35px;
@@ -235,7 +233,6 @@ i[class="fas fa-info"] {
   width: 100%;
   margin-top: 2%;
   padding: 12px 20px 12px 0;
-  font-weight: lighter;
   margin-left: 25px;
 }
 
@@ -275,9 +272,17 @@ i[class="fas fa-info"] {
 }
 
 .popular-title {
+  display: flex;
+  flex-direction: row;
   margin: 30px 0 10px 45px;
   font-weight: bolder;
   font-size: 100%;
+}
+
+i[class="fas fa-chart-line"] {
+  padding-left: 175px;
+  padding-top: 20px;
+  font-size: 35px;
 }
 
 .acc-card {
@@ -755,6 +760,10 @@ li {
     margin-bottom: 5px;
   }
 
+  i[class="fas fa-chart-line"] {
+    display: none;
+  }
+
   .rating {
     padding-left: 10px;
     padding-bottom: 0;
@@ -928,16 +937,21 @@ li {
     margin-right: 500px;
   }
 
-  .filter-4 {
+  .filter-4,
+  .filter-1,
+  .filter-2,
+  .filter-3 {
     margin-top: 10px;
+    margin-left: 15px;
   }
 
   .acc-mars {
-    width: 95%;
+    width: 100%;
+    margin: 0;
   }
 
   .acc-card {
-    width: 38vw;
+    width: 40vw;
     height: auto;
   }
 
@@ -947,7 +961,8 @@ li {
   }
 
   .popular {
-    width: 95%;
+    width: 100%;
+    margin: 20px 0 0 0;
   }
 
   .popular-title {
@@ -955,11 +970,27 @@ li {
   }
 
   .popular-card {
-    width: 75vw;
+    width: 83vw;
     height: auto;
   }
 
   .pop-image {
     width: 35vw;
+  }
+
+  i[class="fas fa-chart-line"] {
+    display: none;
+  }
+
+  .act-card-1,
+  .act-card-4,
+  .act-img-1,
+  .act-img-4 {
+    width: 40vw;
+  }
+
+  .act-card-1,
+  .act-card-4 {
+    margin-left: 38px;
   }
 }
