--- a/styles.css
+++ b/styles.css
@@ -152,6 +152,7 @@ i[class="fas fa-money-bill-wave"] {
   background-color: #deebff;
   border-radius: 50%;
   border: #deebff;
+  color: #0065fc;
 }
 
 i[class="fas fa-child"] {
@@ -163,6 +164,7 @@ i[class="fas fa-child"] {
   background-color: #deebff;
   border-radius: 50%;
   border: #deebff;
+  color: #0065fc;
 }
 
 i[class="fas fa-heart"] {
@@ -174,6 +176,7 @@ i[class="fas fa-heart"] {
   background-color: #deebff;
   border-radius: 50%;
   border: #deebff;
+  color: #0065fc;
 }
 
 i[class="fas fa-dog"] {
@@ -185,6 +188,7 @@ i[class="fas fa-dog"] {
   background-color: #deebff;
   border-radius: 50%;
   border: #deebff;
+  color: #0065fc;
 }
 
 .cost,
